# imfilter

./: .gitmodules  CMakeLists.txt  ImageFilter.h  image_filter.h  image_test.cpp  main.cpp  test.cpp
octave/: fspecial.m  imfilter.m  padarray.m  test.m
